# generador-de-saltos

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  main.cpp  test.sh  test_gacha.sh  test_vector.sh  valgrind.sh
.github/classroom/: autograding.json
include/: Gacha.hpp  GeneradorSalto.hpp  Herta.hpp  Recompensa.hpp  Salto.hpp  Vector.hpp  gacha.hpp  generador_salto.hpp  menu.hpp  recompensa.hpp  salto.hpp  vector.hpp
src/: Gacha.cpp  GeneradorSalto.cpp  Herta.cpp  Recompensa.cpp  Salto.cpp  gacha.cpp  generador_salto.cpp  menu.cpp  recompensa.cpp  salto.cpp
tests/: CMakeLists.txt  HertaTest.cpp  VectorTest.cpp
tests/gacha/: CMakeLists.txt  GachaTest.cpp  gacha_test.cpp
tests/vector/: CMakeLists.txt  vector_test.cpp
