project(TPTests)

include(FetchContent)
FetchContent_Declare(
        googletest
        GIT_REPOSITORY https://github.com/google/googletest.git
        GIT_TAG e4fdb87e76b9fc4b01c54ad81aea19d6e994b994
)

set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

include_directories(${gmock_SOURCE_DIR}/include ${gmock_SOURCE_DIR})

add_executable(TPTests
        VectorTest.cpp
        GachaTest.cpp
)

target_link_libraries(
        TPTests
        GTest::gtest_main
)

include(GoogleTest)
gtest_discover_tests(TPTests)